refactor: adicionando-variaveis-de-cores

--- a/src/app/components/apresentacao/apresentacao.component.html
+++ b/src/app/components/apresentacao/apresentacao.component.html
@@ -1,9 +1,9 @@
-<main class="container_pai bg-branco-1">
+<main >
     <section>
         <article class="font-quando">
-            <button class="font-quando bg-branco-escurecido" data-aos="zoom-in-down" data-aos-duration="3000"> <img
-                    class="raio_icon" src="img/icons/estrela-icon.svg"> Sistema Completo de Gestão</button>
-            <div class="div_centro_custom" data-aos="zoom-in-down" data-aos-duration="2000">
+            <button class="font-quando" data-aos="zoom-in-down" data-aos-duration="3000"> <img
+                    class="raio-icon" src="img/icons/estrela-icon.svg"> Sistema Completo de Gestão</button>
+            <div data-aos="zoom-in-down" data-aos-duration="2000">
                 <h1>Gerencie seus</h1>
                 <h1><span>clientes</span> com</h1>
                 <h1>facilidade</h1>
@@ -12,7 +12,7 @@
                 <h3>Plataforma completa e intuitiva para cadastrar, organizar e acompanhar todos os seus clientes em um
                     só lugar. Simples, rápido e eficiente.</h3>
             </div>
-            <div class="grupo_button">
+            <div class="grupo-button">
                 <button (click)="NavegarRota()" class="font-quando" >Começar agora <img src="img/icons/arrow-right-icon.svg" alt=""></button>
                 <button class="font-quando button-custom"><a href="https://github.com/LucasAlberto0" target="_blank"
                         rel="noopener">Ver Criador</a></button>
