--- a/src/app/components/botao-azul/botao-azul.component.html
+++ b/src/app/components/botao-azul/botao-azul.component.html
@@ -1,3 +1,3 @@
-<button class="font-quando bg-azul button-comecar" (click)="onClick()" rota="/cadastro">
+<button class="font-quando button-comecar" (click)="onClick()" rota="/cadastro">
     {{ texto }}<img src="{{ icone }}" alt="" />
 </button>
