--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-branco-1">
+<header>
     <article>
         <div data-aos="fade-right" data-aos-duration="1000">
             <a href="/"> <img src="img/logo.png" class="logo-img" alt=""></a>
