--- a/src/app/pages/cadastro/cadastro.component.scss
+++ b/src/app/pages/cadastro/cadastro.component.scss
@@ -3,7 +3,8 @@ main {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgba(120, 199, 230, 0.26);
+    background-color: var(--fundo-login-cadastro);
+
     form {
         display: flex;
         justify-content: center;
@@ -11,37 +12,43 @@ main {
         align-items: center;
         gap: 25px;
         padding: 30px 40px;
-        background-color: #4992e617;
-        border: 1px solid #85838334;
+        background-color: var(--fundo-form-login-cadastro);
+        border: 1px solid var(--cinza-border-box);
         border-radius: 10px;
         max-width: 500px;
         width: 100%;
 
         h1 {
-            color: #111;
+            color: var(--preto);
         }
-        ul{
+
+        ul {
             padding-left: 15px;
             font-size: 0.8rem;
         }
+
         img {
             width: 120px;
             height: 90px;
         }
+
         .inputs {
             width: 100%;
             display: flex;
             flex-direction: column;
             gap: 5px;
         }
+
         p-floatlabel {
             width: 100%;
+
             input {
                 width: 100%;
             }
         }
+
         a {
-            color: #111;
+            color: var(--preto);
             font-size: 0.8rem;
         }
     }
@@ -55,7 +62,7 @@ main {
 
 .botao-cadastro ::ng-deep .p-button {
     width: 100%;
-    background-color: #2bbdee;
+    background-color: var(--azul-principal);
     border-radius: 10px;
     font-size: 1.1rem;
     padding: 0.8rem;
@@ -71,16 +78,16 @@ p-inputtext ::ng-deep .p-inputtext,
 p-password ::ng-deep .p-inputtext {
     width: 100%;
     border-radius: 8px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    border: 1px solid var(--cinza-border-box);
+    background-color: var(--branco-fundo);
     font-size: 0.8rem;
     transition: border-color 0.3s;
 }
 
 p-inputtext ::ng-deep .p-inputtext:focus,
 p-password ::ng-deep .p-inputtext:focus {
-    border-color: #2bbdee;
-    box-shadow: 0 0 0 2px rgba(43, 189, 238, 0.2);
+    border-color: var(--azul-principal);
+    box-shadow: 0 0 0 2px var(--fundo-login-cadastro);
 }
 
 p-floatlabel {
@@ -97,14 +104,55 @@ p-floatlabel ::ng-deep .p-password-input {
 p-floatlabel ::ng-deep input.p-inputtext,
 p-password ::ng-deep .p-inputtext {
     border-radius: 8px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    border: 1px solid var(--cinza-border-box);
+    background-color: var(--branco-principal);
     font-size: 1rem;
     transition: border-color 0.3s;
 }
 
 p-floatlabel ::ng-deep input.p-inputtext:focus,
 p-password ::ng-deep .p-inputtext:focus {
-    border-color: #2bbdee;
-    box-shadow: 0 0 0 2px rgba(43, 189, 238, 0.2);
+    border-color: var(--azul-principal);
+    box-shadow: 0 0 0 2px var(--fundo-login-cadastro);
+}
+
+@media(max-width: 490px) {
+    main {
+        height: 100dvh;
+
+        form {
+            padding: 20px 20px;
+            max-width: 360px;
+        }
+    }
+}
+
+@media(max-width: 360px) {
+    main {
+        form {
+            padding: 15px 15px;
+            max-width: 310px;
+        }
+    }
+}
+
+@media(max-width: 340px) {
+    main {
+        height: auto;
+        form {
+            margin: 40px 0px;
+            padding: 15px 10px;
+            max-width: 310px;
+        }
+    }
+}
+
+@media (min-width: 1024px) and (max-height: 770px) {
+    main {
+        height: auto;
+
+        form {
+            margin: 40px 0px;
+        }
+    }
 }
