feat: estrutura-do-grafico-de-status

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <app-header textoBotao="Sair" rotaBotao="/" localizacaoIcone="img/icons/sair-icon.svg" />
 <app-titulo-tabela/>
 <app-tabela-clientes/>
+<app-grafico-status/>
