--- a/src/app/components/grafico-status/grafico-status.component.scss
+++ b/src/app/components/grafico-status/grafico-status.component.scss
@@ -6,6 +6,10 @@ main{
 section{
     max-width: 1200px;
     width: 100%;
+    height: 100%;
+    max-height: 500px;
+    display: flex;
+    justify-content: center;
 }
 
 @media(max-width: 1069px) {
