fix: envio-de-dados-do-select-de-status

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -20,6 +20,10 @@
             <div class="fundo-img"><img src="img/icons/localizacao-icon.svg" alt=""></div>
             <p>{{cliente?.cidade}}</p>
         </div>
+        <div class="div-campo">
+            <div class="fundo-img"><img src="img/icons/localizacao-icon.svg" alt=""></div>
+            <p>{{cliente?.status}}</p>
+        </div>
         <div class="div-button">
             <button class="button-editar" (click)="editar.emit(cliente)"><img src="img/icons/edit-icon.svg"
                     alt="">Editar</button>
