--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -22,7 +22,7 @@
 
     <input matInput formControlName="cidade" required placeholder="Digite a cidade da empresa" />
 
-    <select id="status" name="status" required>
+    <select id="status" name="status" required formControlName="status">
         <option value="" disabled selected hidden>Escolha um status</option>
         <option>Ativo</option>
         <option>Em Negociação</option>
