--- a/src/app/components/grafico-status/grafico-status.component.scss
+++ b/src/app/components/grafico-status/grafico-status.component.scss
@@ -7,9 +7,27 @@ section{
     max-width: 1200px;
     width: 100%;
     height: 100%;
-    max-height: 500px;
+    max-height: 400px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--branco-fundo);
+    padding: 30px;
+    margin: 25px 0px;
+    border: 1px solid var(--cinza-border-box);
+    box-shadow: 5px 5px var(--box-shadow-animation);
+    border-radius: 20px;
+    text-align: left;
+    transition: all ease 0.4s;
+    &:hover{
+        box-shadow: 10px 10px var(--box-shadow-animation);
+        transform: translateY(-5px) !important;
+    }
+    h2{
+        padding: 10px 0px;
+    }
+
 }
 
 @media(max-width: 1069px) {
