--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -138,3 +138,9 @@ form {
         height: 80vh;
     }
 }
+
+@media (min-width: 1024px) and (max-height: 770px) {
+        form{
+            height: 95vh;
+        }
+}
