--- a/src/app/components/grafico-status/grafico-status.component.html
+++ b/src/app/components/grafico-status/grafico-status.component.html
@@ -1,5 +1,5 @@
-<main>
-<section>
+<main data-aos="zoom-in" data-aos-duration="1500">
+<section >
     <h2 class="font-quando-b">Status dos clientes</h2>
     <canvas id="myChart"></canvas>
 </section></main>
