feat: modal-de-edicao-do-gerente-e-troquei-o-nome-do-modal-de-clientes

--- a/src/app/components/titulo-tabela/titulo-tabela.component.html
+++ b/src/app/components/titulo-tabela/titulo-tabela.component.html
@@ -12,6 +12,7 @@
                     <h3>Conta</h3>
                     <h2>{{nomeDaConta}}</h2>
                     <p><img src="img/icons/empresa-icon.svg" class="img-empresa" alt=""> {{nomeDaEmpresa}}</p>
+                    <button (click)="abrirModalEdicao()">Editar</button>
                 </div>
             </div>
         <div class="total-de-clientes font-quando">
