--- a/src/app/components/modal-gerente/modal-gerente.component.html
+++ b/src/app/components/modal-gerente/modal-gerente.component.html
@@ -13,13 +13,23 @@
     <input matInput formControlName="email" required maxlength="60" placeholder="Digite o e-mail" />
 
     <input matInput formControlName="empresa" required maxlength="60" placeholder="Digite o nome da empresa" />
+    <div>
+        <h3 class="font-quando-b" >Alterar senha (opcional)</h3>
+        <small class="font-quando">Para trocar sua senha, preencha ambos os campos abaixo</small>
+    </div>
 
-    <h3 class="font-quando-b" >Alterar senha (opcional)</h3>
-    <small class="font-quando">Para trocar sua senha, preencha ambos os campos abaixo</small>
-
-    <input matInput formControlName="senhaAtual" type="password" placeholder="Senha atual" />
-    <input matInput formControlName="novaSenha" type="password" placeholder="Nova senha" />
-
+    <p-floatlabel variant="in">
+                <p-password formControlName="senhaAtual" [toggleMask]="true" [feedback]="false" class="input-custom"  />
+                <label for="over_label">Senha atual</label>
+            </p-floatlabel>
+    <p-floatlabel variant="in">
+                <p-password formControlName="novaSenha" [toggleMask]="true" class="input-custom" weakLabel="Muito simples" mediumLabel="Media" strongLabel="Forte" promptLabel="Digite a senha"/>
+                <label for="over_label">Senha nova</label>
+                <ng-template #header>
+            <div class="font-semibold text-xm mb-4">Digite a senha</div>
+        </ng-template>
+            </p-floatlabel>
+    
     <div class="botoes">
         <button mat-flat-button color="primary" type="submit" class="button-salvar">
             {{ loading ? 'Salvando...' : 'Salvar Alterações' }}
