--- a/src/app/components/modal-gerente/modal-gerente.component.scss
+++ b/src/app/components/modal-gerente/modal-gerente.component.scss
@@ -12,6 +12,9 @@ form {
     p {
         color: var(--subtitulo);
     }
+    small{
+        color: var(--subtitulo);
+    }
 }
 
 .form-container {
@@ -103,34 +106,52 @@ form {
     background-color: var(--branco-principal);
 }
 
-.input-telefone {
-    ::ng-deep input {
-        color: var(--preto);
-        background-color: var(--branco-principal);
-        border: 2px solid var(--cinza-border-box);
-        padding: 20px 10px;
-        border-radius: 10px;
-        font-size: small;
-        width: 100%;
+p-inputtext,
+p-password {
+    display: block;
+    width: 100%;
+}
 
-        &.invalido {
-            border-color: var(--vermelho);
-        }
+p-inputtext ::ng-deep .p-inputtext,
+p-password ::ng-deep .p-inputtext {
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid var(--cinza-border-box);
+    background-color: var(--branco-fundo);
+    font-size: 0.8rem;
+    transition: border-color 0.3s;
+}
 
-        &:hover {
-            border-color: var(--azul-hover);
-        }
+p-inputtext ::ng-deep .p-inputtext:focus,
+p-password ::ng-deep .p-inputtext:focus {
+    border-color: var(--azul-principal);
+    box-shadow: 0 0 0 2px var(--fundo-login-cadastro);
+}
 
-        &:focus {
-            border-color: var(--azul-principal);
-            outline: none;
-        }
+p-floatlabel {
+    display: block;
+    width: 100%;
+}
 
-        &::placeholder {
-            color: var(--subtitulo);
-            opacity: 0.6;
-        }
-    }
+p-floatlabel ::ng-deep input.p-inputtext,
+p-floatlabel ::ng-deep .p-password-input {
+    width: 100% !important;
+    box-sizing: border-box;
+}
+
+p-floatlabel ::ng-deep input.p-inputtext,
+p-password ::ng-deep .p-inputtext {
+    border-radius: 8px;
+    border: 1px solid var(--cinza-border-box);
+    background-color: var(--branco-principal);
+    font-size: 0.9rem;
+    transition: border-color 0.3s;
+}
+
+p-floatlabel ::ng-deep input.p-inputtext:focus,
+p-password ::ng-deep .p-inputtext:focus {
+    border-color: var(--azul-principal);
+    box-shadow: 0 0 0 2px var(--fundo-login-cadastro);
 }
 
 @media (max-width: 480px) {
